objects/LLC_BI__Collateral__c.object
<CustomObject>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <description>Date of Appraisal</description>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Type__c</fullName>
        <label>Appraisal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As-Is</fullName>
                </value>
                <value>
                    <fullName>As-Stabilized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_of_Leases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment of Leases &amp; Rents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brokerage_Trust_Account__c</fullName>
        <label>Brokerage/Trust Account#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <label>Certificate Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Value__c</fullName>
        <label>Land Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <description>Loan Number</description>
        <label>Loan Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Percent__c</fullName>
        <label>Margin Percent</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Occupancy_Code__c</fullName>
        <label>Occupancy Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Issued_By__c</fullName>
        <label>Stock Issued By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Type__c</fullName>
        <label>Stock Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_Value_1__c</fullName>
        <label>Structure Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Structure_Value_2__c</fullName>
        <label>Structure Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Structure_Value_3__c</fullName>
        <label>Structure Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>UB_Financial_Assets</fullName>
        <active>true</active>
        <label>UB_Financial Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>UB_Insurance</fullName>
        <active>true</active>
        <label>UB_Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>UB_Marketable_Securities</fullName>
        <active>true</active>
        <label>UB_Marketable Securities</label>
    </recordTypes>
    <recordTypes>
        <fullName>UB_Miscellaneous_Assignment</fullName>
        <active>true</active>
        <label>UB_Miscellaneous Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>UB_Real_Estate</fullName>
        <active>true</active>
        <label>UB_Real Estate</label>
    </recordTypes>
    <recordTypes>
        <fullName>UB_Titled</fullName>
        <active>true</active>
        <label>UB_Titled</label>
    </recordTypes>
    <recordTypes>
        <fullName>UB_UCC</fullName>
        <active>true</active>
        <description>Record Type for United Bank UCC Page Layout</description>
        <label>UB_UCC</label>
    </recordTypes>
</CustomObject>